# wCI

./: .gitignore  .gitmodules  CI.Rproj  DESCRIPTION  NAMESPACE  NEWS  README.md  configure.ac  configure.scan  mCI.Rproj
R/: PLX4720_data.R  RcppExports.R  adaptive_permutation.R  ci_functions.R  fCI.R  getCIPvals.R  getSimplePolyList.R  getSimplePolyProduct.R  getSmartMultiplicity.R  kernel.R  kernels.R  modified.cindex.R  mult.p.R  mult.plist.R  naiveKCI.R  naiveRCIBoot.R  naiveRCIPerm.R  nullCIDist.R  paired.concordance.index.R  paired.concordance.index.new.R  paired.concordance.index.weighted.version.R  paired.concordance.index.weighted.version.withStratify.R  paired.concordance.index.withsim.R  parametricBootStrap.R  parametricBootStrapWrapper.R  replicates_vs_different_cells.R  resampleResiduals.R  universal.delta.R
data/: PLX4720_data.rda  PLX4720_data.rds
man/: CI.Rd  PLX4720_data.Rd  fwci.Rd  naiveRCIPerm.Rd  paired.concordance.index.Rd  paired.concordance.index.new.Rd  paired.concordance.index.weighted.version.Rd  paired.concordance.index.withsim.Rd
src/: CI_functions.cpp  CI_functions_new.c  Makevars  RcppExports.cpp  a.out  configure.scan  cudaHelpers.cu  cudaHelpers.h  naiveBootGPU.cu  naivePermGPU.cu  naivePermGPUMultiDelta.cu  naiveRCIBoot.c  naiveRCIPerm.c  rCIPerm.cpp  test.R  xoroshiro128+.c  xoroshiro128+.h
vignettes/: ci_vignette.R  ci_vignette.Rmd  ci_vignette.html  getting-started.Rmd
vignettes_old/: getting-started.Rmd
